ASSIGNED136958
[MSE][Mac] work around AVSampleBufferRenderSynchronizer early callbacks
https://bugs.webkit.org/show_bug.cgi?id=136958
Summary [MSE][Mac] work around AVSampleBufferRenderSynchronizer early callbacks
Eric Carlson
Reported 2014-09-19 13:13:03 PDT
AVSampleBufferRenderSynchronizer can sometimes call a boundary time observer early. When this happens for the duration time observer, seek the synchronizer to to the duration so HTMLMediaElement sees that playback has stopped because currentTime is equal to duration.
Attachments
Proposed patch. (2.74 KB, patch)
2014-09-19 13:19 PDT, Eric Carlson
no flags
Rebased patch (2.58 KB, patch)
2014-09-19 13:29 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2014-09-19 13:13:26 PDT
Eric Carlson
Comment 2 2014-09-19 13:19:39 PDT
Created attachment 238386 [details] Proposed patch.
Eric Carlson
Comment 3 2014-09-19 13:29:07 PDT
Created attachment 238387 [details] Rebased patch
Eric Carlson
Comment 4 2014-09-19 13:55:17 PDT
Chris Dumez
Comment 5 2014-09-19 15:24:53 PDT
I seem to be getting the following build error after this change: Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:646:19: error: variable 'duration' cannot be implicitly captured in a lambda with no capture-default specified if (now < duration) {
Jer Noble
Comment 6 2014-09-19 16:00:09 PDT
Landed a follow-up build fix in r173777 <http://trac.webkit.org/r173777>.
Note You need to log in before you can comment on or make changes to this bug.