[MSE][Mac] work around AVSampleBufferRenderSynchronizer early callbacks https://bugs.webkit.org/show_bug.cgi?id=136958

Reviewed by Jer Noble.

No new tests, we have been unable to come up with a test case that reproduces
this issue reliably.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::durationChanged): Set the synchronizer
    time to duration when the duration time observer is called early. Add more logging.


Canonical link: https://commits.webkit.org/154775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173771 268f45cc-cd09-0410-ab3c-d52691b4dbfc